remove: unnecessary resources

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YB's LiveATC Silence Remover</title>
-    <script src="./assets/ffmpeg/ffmpeg.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.10.0/dist/ffmpeg.min.js"></script>
     <script src="index.js"></script>
     <link rel="stylesheet" href="index.css">
 </head>
