chore: mobile? be my guest ;)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YB's LiveATC Silence Remover</title>
+    <title>LiveATC Silence Remover</title>
     <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.10.0/dist/ffmpeg.min.js"></script>
     <script src="index.js"></script>
     <link rel="stylesheet" href="index.css">
@@ -17,8 +17,9 @@
     </script>
 </head>
 <body>
+<h2>LiveATC Silence Remover</h2>
 <div id="drop-area">
-    <p>Drag & Drop MP3 files here</p>
+    <p>Drag & Drop mp3 Files</p>
     <ul id="file-list"></ul>
     <div id="file-controls">
         <label for="file-input" id="file-label">Choose Files</label>
