chore: mobile? be my guest ;) -> to text, not alert

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <button id="process-button">Silence Remove</button>
     </div>
 </div>
+<p id="mobile-message">For a smoother experience, we recommend a <strong>desktop...</strong> <br>but if you like a challenge, be my guest! ;)</p>
 <p id="loading-indicator">Processing...</p>
 <div id="control-buttons">
     <button id="download-all-button" class="button hidden">Download All</button>
