--- a/pages/liveatc.html
+++ b/pages/liveatc.html
@@ -39,12 +39,12 @@
             <button id="process-button">Silence Remove</button>
         </div>
     </div>
+    <input type="hidden" id="original-bitrate-input">
     <p id="mobile-message">For a smoother experience, we recommend a <strong>desktop...</strong> <br>but if you like a challenge, be my guest! ;)</p>
     <p id="loading-indicator">Processing...</p>
     <div id="control-buttons">
         <button id="download-all-button" class="button hidden">Download All</button>
     </div>
-    <div id="log-container"></div>
     <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.10.0/dist/ffmpeg.min.js" defer></script>
     <script src="/assets/js/liveatc.js" defer></script>
 </body>
