feat: 구걸버튼추가

--- a/pages/liveatc.html
+++ b/pages/liveatc.html
@@ -18,6 +18,7 @@
 
     <title>LiveATC mp3 Silence Remover | Trim Your LiveATC MP3 Files</title>
     <link rel="stylesheet" href="/assets/css/liveatc.css">
+    <link rel="stylesheet" href="/assets/css/bmc.css">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-5Q8KRHXS7R"></script>
@@ -43,6 +44,12 @@
     <p id="loading-indicator">Processing...</p>
     <div id="control-buttons">
         <button id="download-all-button" class="button hidden">Download All</button>
+    </div>
+    <!-- Buy Me a Coffee 버튼 -->
+    <div class="bmc-btn-container">
+        <a class="bmc-btn" href="https://buymeacoffee.com/yaboong" target="_blank">
+            <span class="bmc-btn-text">☕ Buy me a coffee</span>
+        </a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.10.0/dist/ffmpeg.min.js" defer></script>
     <script src="/assets/js/liveatc.js" defer></script>
