feat: 구걸버튼조정

--- a/pages/liveatc.html
+++ b/pages/liveatc.html
@@ -44,10 +44,7 @@
     <p id="loading-indicator">Processing...</p>
     <div id="control-buttons">
         <button id="download-all-button" class="button hidden">Download All</button>
-    </div>
-    <!-- Buy Me a Coffee 버튼 -->
-    <div class="bmc-btn-container">
-        <a class="bmc-btn" href="https://buymeacoffee.com/yaboong" target="_blank">
+        <a id="bmc-button" class="bmc-btn" href="https://buymeacoffee.com/yaboong" target="_blank">
             <span class="bmc-btn-text">☕ Buy me a coffee</span>
         </a>
     </div>
