--- a/pages/liveatc.html
+++ b/pages/liveatc.html
@@ -16,7 +16,7 @@
     <meta name="twitter:description" content="A web tool that automatically removes silent sections from LiveATC MP3 files.">
     <meta name="twitter:image" content="https://yaboong.netlify.app/images/yaboong.jpeg">
 
-    <title>LiveATC mp3 Silence Remover | Trim Your LiveATC MP3 Files</title>
+    <title>Audio Silence Remover | LiveATC Silence Remove</title>
     <link rel="stylesheet" href="/assets/css/liveatc.css">
     <link rel="stylesheet" href="/assets/css/bmc.css">
 
@@ -30,7 +30,7 @@
     </script>
 </head>
 <body>
-    <h1>LiveATC Silence Remover</h1>
+    <h1>Audio Silence Remover</h1>
     <div id="drop-area">
         <p>Drag & Drop mp3 Files</p>
         <ul id="file-list"></ul>
